<resources>
    <string name="app_name" translatable="false">QueDrop</string>
    <string name="perTurnOnGPS" translatable="false">Turn On GPS</string>
    <string name="textWhoAreYou" translatable="false">Who Are you</string>
    <string name="textHowUseQueDrop" translatable="false">How do you want to use</string>
    <string name="textQue" translatable="false">QUE?</string>
    <string name="textCustomer" translatable="false">Customer</string>
    <string name="textSupplier" translatable="false">Supplier</string>
    <string name="textCustomerCheck" translatable="false">I\'m Customer</string>
    <string name="textSupplierCheck" translatable="false">I\'m Supplier</string>
    <string name="textAddress" translatable="false">Add an Address</string>
    <string name="addAddress" translatable="false">Add Address</string>
    <string name="saveAddress" translatable="false">Save Address</string>
    <string name="submitAddress" translatable="false">Submit</string>
    <string name="continueAddress" translatable="false">Confirm</string>
    <string name="placeAutomaticFragment" translatable="false">Place Fragment</string>
    <string name="addressName" translatable="false">Address name</string>
    <string name="addressUnitNumber" translatable="false">Unit Number</string>
    <string name="addressIcon" translatable="false">Address Type</string>
    <string name="addressInfo" translatable="false">Address</string>
    <string name="addressTitle" translatable="false">Select Delivery Address</string>
    <string name="currentLocation" translatable="false">Current Location</string>
    <string name="hintSearch" translatable="false">Search Address</string>
    <string name="edit_address" translatable="false">Edit Address</string>
    <string name="editAddressBlank" translatable="false">Enter Address First</string>
    <string name="editAddressNameBlank" translatable="false">Enter Address Name First</string>
    <string name="notCustomer" translatable="false">Not a Customer?</string>
    <string name="loginAsSupplier" translatable="false">Log In as Supplier</string>
    <string name="home" translatable="false">Home</string>
    <string name="work" translatable="false">Work</string>
    <string name="hotel" translatable="false">Hotel</string>
    <string name="other" translatable="false">Other</string>
    <string name="cancel" translatable="false">Cancel</string>
    <string name="ok" translatable="false">Ok</string>
    <string name="textDelete" translatable="false">Are you Sure you Want To Delete this Address</string>
    <string name="noFeesTitle" translatable="false">No Fees</string>
    <string name="noFeesText" translatable="false">This is the Original Price of the item from the store.QueDrop doesn\'t add any extra fees for this item\'s price.</string>
    <string name="noFeesCancel" translatable="false">Cancel</string>
    <string name="noFeesConfirm" translatable="false">Confirm</string>
    <string name="homeTab" translatable="false">Home</string>
    <string name="notificationTab" translatable="false">Notification</string>
    <string name="orderTab" translatable="false">Order</string>
    <string name="exploreTab" translatable="false">Explore</string>
    <string name="favoriteTab" translatable="false">Favorite</string>
    <string name="profileTab" translatable="false">Profile</string>
    <string name="favoriteTabs" translatable="false">Favorites</string>
    <string name="todayDeal" translatable="false">Today Deals</string>
    <string name="paymentOffer" translatable="false">Payment Offers/Coupon</string>
    <string name="restaurantOffers" translatable="false">Restaurant Offers</string>
    <string name="categories" translatable="false">Categories</string>
    <string name="textDeliveryLocation" translatable="false">Delivery Location</string>
    <string name="fromSettingAddress" translatable="false">SettingAddress</string>
    <string name="fromHomeAddress" translatable="false">HomeAddress</string>
    <string name="hintEditNearBy" translatable="false">Search here..</string>
    <string name="hintFood" translatable="false">Search Product</string>
    <string name="kilometer" translatable="false">0 km</string>
    <string name="closedShop" translatable="false">&#160; - Closed</string>
    <string name="mins" translatable="false">0 mins</string>
    <string name="rs" translatable="false">$</string>
    <string name="pendingStatus" translatable="false">Pending</string>
    <string name="responseTrue" translatable="false">true</string>
    <string name="responseFalse" translatable="false">false</string>
    <string name="title" translatable="false">title</string>
    <string name="current" translatable="false">current</string>
    <string name="noCategoryAvailableStore" translatable="false">No Product Available</string>
    <string name="openingNow" translatable="false">Open Now</string>
    <string name="closed" translatable="false">Closed</string>
    <string name="add" translatable="false">Add</string>
    <string name="added" translatable="false">Added</string>
    <string name="quantity" translatable="false">1</string>
    <string name="medium" translatable="false">Select Size</string>
    <string name="add_addons" translatable="false">Add addons</string>
    <string name="defaultSize" translatable="false">Default</string>
    <string name="addItem" translatable="false">ADD ITEM</string>
    <string name="itemTotal" translatable="false">Item total</string>
    <string name="serviceCharges" translatable="false">Service Charges</string>
    <string name="shoppingFee" translatable="false">Shopping Fee</string>
    <string name="deliveryFee" translatable="false">Delivery Fee</string>
    <string name="orderDiscount" translatable="false">Order Discount</string>
    <string name="couponDiscount" translatable="false">Coupon Discount</string>
    <string name="itemTotalRs" translatable="false">item</string>
    <string name="itemsTotalRs" translatable="false">items</string>
    <string name="customise" translatable="false">Customise</string>
    <string name="addtoCart" translatable="false">ADD TO CART</string>
    <string name="viewCart" translatable="false">VIEW CART</string>
    <string name="addOrder" translatable="false">Add Order</string>
    <string name="typeProduct" translatable="false">Type Product</string>
    <string name="qty" translatable="false">Qty</string>
    <string name="continueMain" translatable="false">Continue</string>
    <string name="addItemTap" translatable="false">Tap To add an item</string>
    <string name="titleStoreDetails" translatable="false">Order Details</string>
    <string name="productNameToast" translatable="false">Please add Product Name.</string>
    <string name="productQuantityToast" translatable="false">Please add Product Quantity.</string>
    <string name="validQty" translatable="false">Please enter valid Quantity.</string>
    <string name="firstLoginMessage" translatable="false">Please login to application to add items for placing order.</string>
    <string name="titleStore" translatable="false">Add a Store</string>
    <string name="btnAddStore" translatable="false">Add</string>
    <string name="addAddressStore" translatable="false">Add Address</string>
    <string name="storeDescription" translatable="false">Description</string>
    <string name="storeNameToast" translatable="false">Please add Store Name</string>
    <string name="storeLocationToast" translatable="false">Please add Store Location</string>
    <string name="addStoreSuccessful" translatable="false">Your store successfully registerd.</string>
    <string name="titleCart" translatable="false">Cart</string>
    <string name="deliverNow" translatable="false">Deliver to </string>
    <string name="itemsCart" translatable="false">items $</string>
    <string name="minCart" translatable="false">mins</string>
    <string name="placeOrderCart" translatable="false">Place Order</string>
    <string name="storeNameCart" translatable="false">Store Name</string>
    <string name="storeAddressCart" translatable="false">Store Address</string>
    <string name="storeDistanceCart" translatable="false">km</string>
    <string name="recurringOrderCart" translatable="false">Recurring Order</string>
    <string name="paymentMethod" translatable="false">Payment Method</string>
    <string name="change" translatable="false">Change</string>
    <string name="cardNum" translatable="false">**** **** **** 9999</string>
    <string name="expires" translatable="false">Expires 03/27</string>
    <string name="deliveryNowCart" translatable="false">Deliver Now</string>
    <string name="advanceOrderCart" translatable="false">Advance Order</string>
    <string name="changeDeliveryDateTime" translatable="false">Change delivery date &amp; time</string>
    <string name="billDetails" translatable="false">Bill Details</string>
    <string name="itemTotalCart" translatable="false">Item total</string>
    <string name="chargesStoreCart" translatable="false">Store Charges</string>
    <string name="deliveryChargesCart" translatable="false">Delivery Charges</string>
    <string name="payCart" translatable="false">To Pay</string>
    <string name="rsCart" translatable="false">$0</string>
    <string name="freeCart" translatable="false">FREE</string>
    <string name="noteCart" translatable="false">Write a Note for Driver</string>
    <string name="default1" translatable="false">Default</string>
    <string name="hours" translatable="false">hours</string>
    <string name="min" translatable="false">mins</string>
    <string name="customiseItem" translatable="false">Customise Item</string>
    <string name="updateItem" translatable="false">Update Item</string>
    <string name="browseMenuList" translatable="false">Browse Menu List</string>
    <string name="totalAmountPurchased" translatable="false">Total amount for product will be updated after  order purchased.</string>
    <string name="cartEmpty" translatable="false">Your Cart is Empty</string>
    <string name="cartEmptyText" translatable="false">Looks like you haven\'t added anything \n to your Cart yet</string>
    <string name="orderScreen" translatable="false">OrderScreen</string>
    <string name="favouriteScreen" translatable="false">FavouriteScreen</string>
    <string name="couponCart" translatable="false">Apply Coupon</string>
    <string name="currentOrderNote" translatable="false">\u25CF  When Driver attached the receipt.After that Manual Store Items Bill will shown.</string>
    <string name="checkNotes" translatable="false">please Check Notes First.</string>
    <string name="calSunday" translatable="false">Sun</string>
    <string name="calMonday" translatable="false">Mon</string>
    <string name="calTuesday" translatable="false">Tue</string>
    <string name="calWednesday" translatable="false">Wed</string>
    <string name="calThursday" translatable="false">Thu</string>
    <string name="calFriday" translatable="false">Fri</string>
    <string name="calSaturday" translatable="false">Sat</string>
    <string name="orderOn" translatable="false">ORDER ON</string>
    <string name="november" translatable="false">10 November 2020</string>
    <string name="amountOrder" translatable="false">AMOUNT</string>
    <string name="repeatOrder" translatable="false">Repeat Order</string>
    <string name="giveFeedBack" translatable="false">Give Feedback</string>
    <string name="writeFeedBack" translatable="false">Please Write your Feedback</string>
    <string name="cancelFeedBack" translatable="false">Cancel</string>
    <string name="sendFeedBack" translatable="false">Send Review</string>
    <string name="S_QUE" translatable="false">Que</string>
    <string name="S_TURN_ON_GPS" translatable="false">Turn On GPS</string>
    <string name="S_REQ_GPS" translatable="false">Please turn you GPS to find out \nbetter suggestion near you.</string>
    <string name="express_delivery" translatable="false">Express Delivery</string>
</resources>