<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:keepScreenOn="true"
    android:padding="@dimen/_13sdp">

    <TextView
        android:id="@+id/textTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/textWhoAreYou"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/_20ssp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textHowDo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_7dp"
        android:drawablePadding="@dimen/dimen_7dp"
        android:text="@string/textHowUseQueDrop"
        android:textColor="@color/colorGrey"
        android:textSize="@dimen/_13ssp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textTitle" />

    <TextView
        android:id="@+id/textQue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_5dp"
        android:drawablePadding="@dimen/dimen_7dp"
        android:fontFamily="@font/montserrat_semibold"
        android:textColor="@color/colorBlueText"
        android:textSize="@dimen/_16ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textHowDo"
        app:layout_constraintTop_toBottomOf="@+id/textTitle" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/btnShowUser"
        app:layout_constraintTop_toBottomOf="@+id/textHowDo">

        <TextView
            android:id="@+id/textCustomer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_10dp"
            android:drawableTop="@drawable/customer_unpress"
            android:gravity="center"
            android:text="@string/textCustomer"
            android:textColor="@color/colorGrey"
            android:textSize="@dimen/_16ssp"
            app:layout_constraintBottom_toTopOf="@+id/textSupplier"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/textSupplier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_10dp"
            android:drawableTop="@drawable/supplier_unpress"
            android:gravity="center_horizontal"
            android:text="@string/textSupplier"
            android:textColor="@color/colorGrey"
            android:textSize="@dimen/_16ssp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textCustomer" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/btnShowUser"
        style="@style/QueDrop.Button.DarkBlue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_13sdp"
        android:text="@string/textCustomerCheck"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>