<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/dimen_10dp"
    android:layout_marginBottom="@dimen/dimen_5dp"
    android:background="@drawable/view_rounded_search_image"
    android:orientation="vertical"
    android:paddingTop="@dimen/dimen_10dp"
    android:paddingBottom="@dimen/dimen_10dp">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvMainCartListCurrent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/dimen_5dp"
        android:paddingRight="@dimen/dimen_5dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/borderTop"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_1dp"
        android:layout_marginLeft="@dimen/dimen_10dp"
        android:layout_marginTop="@dimen/dimen_5dp"
        android:layout_marginRight="@dimen/dimen_10dp"
        android:background="@color/colorLightGrey"
        app:layout_constraintTop_toBottomOf="@+id/rvMainCartListCurrent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvOrderOnOrder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimen_10dp"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:layout_marginRight="@dimen/dimen_10dp"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/orderOn"
        android:textColor="@color/colorDarkGrey"
        android:textSize="@dimen/text_size_xxm"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/borderTop" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvDateOrder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_semibold"
        android:text="@string/november"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/text_size_xm"
        app:layout_constraintStart_toStartOf="@+id/tvOrderOnOrder"
        app:layout_constraintTop_toBottomOf="@+id/tvOrderOnOrder" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvAmountOrder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimen_10dp"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/amountOrder"
        android:textColor="@color/colorDarkGrey"
        android:textSize="@dimen/text_size_m"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDateOrder" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvOTotalOrder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_semibold"
        android:text="@string/rs"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/text_size_xm"
        app:layout_constraintStart_toStartOf="@+id/tvOrderOnOrder"
        app:layout_constraintTop_toBottomOf="@+id/tvAmountOrder" />

    <TextView
        android:id="@+id/tvStatusOrder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/dimen_10dp"
        android:background="@drawable/view_rounded_search_edit"
        android:fontFamily="@font/montserrat_semibold"
        android:paddingLeft="@dimen/dimen_7dp"
        android:paddingTop="@dimen/dimen_5dp"
        android:paddingRight="@dimen/dimen_10dp"
        android:paddingBottom="@dimen/dimen_5dp"
        android:text="@string/repeatOrder"
        android:textColor="@color/colorThemeGreen"
        android:textSize="@dimen/text_size_m"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/tvOTotalOrder"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tvDeliveryType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/dimen_10dp"
        android:background="@drawable/view_rounded_search_edit"
        android:fontFamily="@font/montserrat_semibold"
        android:paddingLeft="@dimen/dimen_7dp"
        android:paddingTop="@dimen/dimen_5dp"
        android:paddingRight="@dimen/dimen_10dp"
        android:paddingBottom="@dimen/dimen_5dp"
        android:text="@string/express_delivery"
        android:textColor="@color/colorThemeGreen"
        android:textSize="@dimen/text_size_m"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/tvOTotalOrder"
        app:layout_constraintEnd_toEndOf="parent" />


    <View
        android:id="@+id/hor"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_1dp"
        android:layout_marginLeft="@dimen/dimen_10dp"
        android:layout_marginTop="@dimen/dimen_5dp"
        android:layout_marginRight="@dimen/dimen_10dp"
        android:background="@color/colorLightGrey"
        app:layout_constraintTop_toBottomOf="@+id/rvMainCartListCurrent" />


</androidx.constraintlayout.widget.ConstraintLayout>
